# thermatype

./: data.db  index.html  main.py  photo.py  print_test.py  printe_test.py  pyproject.toml  typewriter.py
typewriter/: go.mod  main.go
