[project]
name = "pyductivity"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.3.0",
    "escpos>=2.0.0",
    "fastapi[standard]>=0.118.3",
    "feedparser>=6.0.12",
    "loguru>=0.7.3",
    "lorem>=0.1.1",
    "opencv-python>=4.12.0.88",
    "prompt-toolkit>=3.0.52",
    "pydantic>=2.12.0",
    "python-dateutil>=2.9.0.post0",
    "requests>=2.32.5",
    "rich>=14.1.0",
    "sqlalchemy>=2.0.43",
]
